# LetDem

./: .gitignore  README.md  celerybeat-schedule  conftest.py  manage.py  pyproject.toml
apps/accounts/: admin.py  apps.py  managers.py  models.py  signals.py
apps/accounts/backends/: firebase.py
apps/accounts/migrations/: 0001_initial.py  0002_userdevice.py  0003_userpreferences.py  0004_alter_userpreferences_user.py  0005_alter_contribution_action_notification.py  0006_alter_userdevice_user.py  0007_alter_userdevice_user.py  0008_user_language.py  0009_user_payment_provider_id.py  0010_rename_payment_provider_id_user_provider_customer_id.py
apps/alerts/: admin.py  dynamic_preferences_registry.py  models.py  settings.py
apps/commons/: admin.py  apps.py  decorators.py  dynamic_preferences_registry.py  environment.py  models.py  paginators.py  serializers.py  settings.py  utils.py  validators.py
apps/credits/: admin.py  apps.py  dynamic_preferences_registry.py  fields.py  models.py  settings.py  signals.py  tasks.py
apps/events/: admin.py  apps.py  dynamic_preferences_registry.py  models.py  settings.py  signals.py  tasks.py
apps/mapas/: signals.py  utils.py
apps/maps/: dynamic_preferences_registry.py  settings.py
apps/marketplace/: admin.py  apps.py  forms.py  models.py  signals.py  tasks.py  urls.py
apps/reservations/: admin.py  apps.py  dynamic_preferences_registry.py  models.py  settings.py  signals.py
apps/spaces/: admin.py  apps.py  dynamic_preferences_registry.py  models.py  settings.py  signals.py  tasks.py  utils.py
letdem/: asgi.py  celery.py  urls.py  wsgi.py
letdem/settings/: base.py  local.py  staging.py  test.py
seeds/marketplace/: README.md  seed_marketplace.ps1  seed_marketplace.sh
(+112 files in other folders)
